/*
 *  UCF COP3330 Summer 2021 Assignment 4 Solution
 *  Copyright 2021 Tanushka Kommoju
 */

package ucf.assignments;

import java.util.ArrayList;

public class Lists {
    private static ArrayList<TodoList> allLists;

    public void addList(String name){
        //Make a new list name
    }

    public void removeList(String name){
        //find and remove list name
    }

    public String getItems(String name){
        //Find the name by loop
        //Make items by calling and adding to return string
        return "";
    }
    public String getLists(String name){
        //Call with a new line and add to a return string
        //return the string list
        return "";
    }

    public String getAllItems(String name){
        //Call and add to return string
        return "";
    }

    public void exportList(String name){
        //Add  to a text file for name
    }

    public void exportAllLists(){
        //Add to a text file for every list
    }

    public void loadList(String name){
        //Loop through text file until name is found
        //Make a new object
        //Add items from the text file
        //Add object to allLists
    }

    public void loadAllLists(){
        //Loop through text file
        //Make a new object
        //Add items from the text file
        //Add object to allLists
        //Repeat until the end
    }
}