/*
 *  UCF COP3330 Summer 2021 Assignment 4 Solution
 *  Copyright 2021 Tanushka Kommoju
 */

package ucf.assignments;
import java.awt.event.ActionEvent;

public class Main {

    public void selectListClick(ActionEvent actionEvent) {
        //Remember the list
    }

    public void selectItemClick(ActionEvent actionEvent) {
        //Make sure a list has been selected.
    }

    public void displayIncompleteListClick(ActionEvent actionEvent) {
        //Shows all the incomplete lists
    }

    public void displayCompleteItemsClick(ActionEvent actionEvent) {
        //Shows all the complete lists
    }

    public void displayListItemsClick(ActionEvent actionEvent) {
        //fill item area with items from the list then find the items
    }

    public void removeListClick(ActionEvent actionEvent) {
        //Remove the text and all the items
    }

    public void exportListClick(ActionEvent actionEvent) {
        //Copy in JSON format to a text file
        // If it already exists update that list
    }

    public void removeItemClick(ActionEvent actionEvent) {
        //make sure an item and list have been selected
    }

    public void addListClick(ActionEvent actionEvent) {
        //Make a list based off the name
        //Add the list to the list aggregate
    }

    public void editListNameClick(ActionEvent actionEvent) {
        //Change name and update text
    }

    public void importSpecificListsClick(ActionEvent actionEvent) {
        //Look up all names of list separated by a comma in the JSON file
        //Add and update
    }

    public void addItemClick(ActionEvent actionEvent) {
        //Add new item with a name
    }

    public void editItemNameClick(ActionEvent actionEvent) {
        //make sure a list and item have been selected
        //Update item with a name
    }

    public void editItemDateClick(ActionEvent actionEvent) {
        //make sure a list and item have been selected
        //Update with a date
    }

    public void exportAllListsClick(ActionEvent actionEvent) {
        //Export all lists from Lists to JSON file
    }

    public void markItemCompleteClick(ActionEvent actionEvent) {
        //Change list flag to marked
    }
}
