/*
 *  UCF COP3330 Summer 2021 Assignment 4 Solution
 *  Copyright 2021 Tanushka Kommoju
 */

package ucf.assignments;

public class TodoItem {
    private static String name;
    private static String date;
    private static boolean isComplete;

    public void setName(String newName){ //Update name
    }

    public void setDate(String newDate){ //Update date
    }

    public void setComplete(boolean flag){ //Update isComplete
    }

    public String get(){ //Return the name and date formatted
        return  "";
    }

    public String getComplete(){ //If isComplete is true, return the item and date as a string
        return  "";
    }

}
