/*
 *  UCF COP3330 Summer 2021 Assignment 4 Solution
 *  Copyright 2021 Tanushka Kommoju
 */

package ucf.assignments;

import java.util.ArrayList;

public class TodoList {
    private static String name;
    private static ArrayList<TodoItem> allItems;

    public void setName(String newName){
        //Update the name
    }

    public void addItem(String itemName){
        //Make a new item and add it
        //If item exists don't do anything
    }

    public void removeItem(String itemName){
        //Loop through the items to find the requested item
        //Delete it
    }

    public String stringList(){
        //Return a string with items
        //Add list name to a return string
        return "";
    }

    public String completedItems(){
        //Return a string with completed items
        //Add list name to a return string
        return "";
    }
}


