@startuml
'https://plantuml.com/class-diagram

class Task{
    main()
    start()
}

class Main{
    +selectListClick()
    +selectItemClick()
    +displayIncompleteListClick()
    +displayCompleteItemsClick()
    +markListCompleteClick()
    +DisplayListItemsClick()
    +removeListClick()
    +exportListClick()
    +removeItemClick()
    +addListClick()
    +editListNameClick()
    +importSpecifiedListsClick()
    +addItemClick()
    +editItemNameClick()
    +editItemDateClick()
    +exportAllListsClick()
}

class Lists{
    ArrayList<TodoList> allLists

    +addList()
    +removeList()
    +getLists()
    +getListItems()
    +getCompleteItems()
    +exportList()
    +exportAllLists()
    +loadList()
    +loadAllLists()
}

class TodoList{
    String name
    ArrayList<TodoItem> allItems

    +setName()
    +addItem()
    +removeItem()
    +listAsString()
    +completeItemsAsString()
}

class TodoItem{
    String name
    Boolean isComplete

    +setName()
    +setDate()
    +setCompleteFlag()
    +get()
    +getIfComplete()
}

javafx.Application <|-- Task
Task o-- Lists
Task o- Main
TodoList *-- TodoItem
Lists o- TodoList
@enduml